refactor: Rename project and simplify recipe generation
Updates project name from "Gemini Recipe Generator" to "InstaDish Recipe Generator" across package.json, metadata.json, and App.tsx.

Removes the 'dietary' parameter from the `generateRecipe` function in `geminiService.ts` and its usage in `App.tsx`. The API prompt has been updated to reflect this change, focusing solely on ingredients, cuisine, and language for recipe generation. This streamlines the input process and simplifies the core functionality.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemini-recipe-generator",
+  "name": "instadish-recipe-generator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
