feat: Complete Next.js migration and Notion integration for recipe parser (issue #3)

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,13 +1,9 @@
-# Gemini AI Configuration (Required)
-# Get your API key from: https://ai.google.dev/
+# Gemini AI API Key - Get from https://ai.google.dev/
+# Used for both client-side recipe generation and server-side recipe parsing
+NEXT_PUBLIC_GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Notion Integration Configuration (V2 - Optional)
-# Get your integration token from: https://developers.notion.com/
-# Note: VITE_ prefix is required for client-side access in Vite
-VITE_NOTION_API_KEY=your_notion_integration_token_here
-
-# Notion Database IDs (V2 - Required if using Notion integration)
-# Create databases with the required schema and copy their IDs from the URL
-VITE_RECIPES_DATABASE_ID=your_recipes_database_id_here
-VITE_INGREDIENTS_DATABASE_ID=your_ingredients_database_id_here
+# Notion Integration (for Recipe Parser - Server-side only)
+NOTION_API_KEY=your_notion_api_key_here
+RECIPES_DATABASE_ID=your_recipes_database_id_here
+INGREDIENTS_DATABASE_ID=your_ingredients_database_id_here
