--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "instadish-recipe-generator",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "test": "vitest",
     "test:run": "vitest run"
   },
@@ -14,11 +14,18 @@
     "@google/genai": "^1.19.0",
     "@notionhq/client": "^5.1.0",
     "dotenv": "^17.2.2",
+    "next": "^15.5.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.18.6",
+    "@types/react": "19.1.13",
+    "autoprefixer": "^10.4.21",
+    "eslint-config-next": "^15.5.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vitest": "^1.0.0"
