fix: Configure Next.js build for production deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,10 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "examples/**/*",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "vitest.config.ts"
   ]
 }
