--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@danielxceron/youtube-transcript": "^1.2.3",
     "@google/genai": "^1.19.0",
     "@notionhq/client": "^5.1.0",
     "dotenv": "^17.2.2",
