added recipe-ingredient-junction-table and improvements for romanian recipes

--- a/.env.local.example
+++ b/.env.local.example
@@ -7,4 +7,5 @@ GEMINI_API_KEY=your_gemini_api_key_here
 NOTION_API_KEY=your_notion_api_key_here
 RECIPES_DATABASE_ID=your_recipes_database_id_here
 INGREDIENTS_DATABASE_ID=your_ingredients_database_id_here
+RECIPE_INGREDIENTS_DATABASE_ID=your_recipe_ingredients_database_id_here
 GROCERY_LISTS_DATABASE_ID=your_grocery_list_database_id_here
